# usfm-ast

./: .env.door43.example  .env.example  .env.qa.example  .eslintrc.json  .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  LICENSE  MIGRATION_CHECKLIST.md  README.md  check-missing-usj.sh  compare-parser-output.js  create-pnpm-config.sh  fix-usj-spacing.js  jest.config.js  jest.config.ts  package-lock.json  package.json  simple-spacing-fix.js  simple-test.js  tmp-milestones-out.usfm  tmp-milestones.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json  tsup.config.ts  turbo.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
docs/: 00-project-goal.md  07-github-mcp.md  08-github-agent-workflow.md  09-ci-and-branch-protection.md  10-parsing-quickstart.md  14-github-bootstrap.md  16-production-readiness.md  17-oracle-comparison.md  18-editor-core.md  19-parser-metadata-and-usfm-buffer.md  20-alignment-layer.md  21-collab-relay-server.md  23-editor-core-extensibility.md  24-marker-registry.md  25-editor-ui-toolkit.md  26-theming.md  27-adapters.md  27-editor-adapters.md  28-editor-sdk-overview.md  29-alignment-patterns-english-spanish.md  29-bidirectional-sync.md  30-enhanced-project-model.md  30-project-format.md  MONOREPO_TOOLS_COMPARISON.md  README.md  running-apps.md
optbreak-example-2/: example.usfm
roundtrip-out-jonah/: SUMMARY.txt  usfm-roundtrip.diff  (+2 more)
(+836 files in other folders)
